update layout, fix js error and css alignment issue

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -5,13 +5,13 @@
 }
 
 article {
-  margin: 0 auto;
-  
+  margin: 0 auto 50px;
+  min-height: 700px;
 }
 
 body {
   font: 16px/1 Calibri, Helvetica, Arial, sans-serif;
-  min-width: 960px;
+  min-width: 1162px;
 }
 
 
@@ -21,12 +21,10 @@ h1{
 }
 
 h2{
-    display:inline-block;
-    text-align: center;
     font-size: 30px;
     line-height: 40px;
-    width: 232px;
-    margin: 20px 20px 0;
+    width: 400px;
+    margin: 20px 0 0 280px;
 }
 
   /******************/
@@ -135,7 +133,8 @@ nav {
     font-size: 30px;
     line-height: 40px;
     width: 200px;
-    margin: 20px 20px 0;border-radius: 5px;
+    margin: 1px 20px;
+    border-radius: 5px;
     background-image: -webkit-gradient(
         linear,
         left top,
